fix: fix issues with the CSS on mobile

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -71,6 +71,6 @@ blockquote {
 }
 
 img {
-  width: auto;
-  max-width: 100%;
+  width: 100px;
+  height: 100px;
 }
